--- a/Readable/MainWindow.xaml
+++ b/Readable/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="486.8" Width="879.86">
     <Grid>
         <Button Content="Nieuw boek" HorizontalAlignment="Left" Margin="774,27,0,0" VerticalAlignment="Top" Width="75"/>
-        <ListView Name="MainListView" HorizontalAlignment="Left" Height="234" Margin="10,10,0,0" VerticalAlignment="Top" Width="270">
+        <ListView Name="MainListView" HorizontalAlignment="Left" Height="337" Margin="10,109,0,0" VerticalAlignment="Top" Width="439">
             <ListView.Resources>
                 <Style TargetType="GridViewColumnHeader">
                     <Setter Property="Visibility" Value="Collapsed" />
@@ -20,5 +20,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <RadioButton x:Name="RadioButtonAll" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" GroupName="AllReadNotRead" IsChecked="True" Checked="RadioButtonAll_Checked"/>
+        <RadioButton x:Name="RadioButtonRead" HorizontalAlignment="Left" Margin="100,89,0,0" VerticalAlignment="Top" GroupName="AllReadNotRead" Checked="RadioButtonRead_Checked"/>
+        <RadioButton x:Name="RadioButtonNotRead" HorizontalAlignment="Left" Margin="195,89,0,0" VerticalAlignment="Top" GroupName="AllReadNotRead" Checked="RadioButtonNotRead_Checked"/>
     </Grid>
 </Window>
